# space-game

./: .gitignore  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json.example  Makefile  README.md  vcpkg-configuration.json  vcpkg.json
include/: asteroid.h  bullet.h  circle_collider.h  collider.h  collision_layer.h  entity.h  game.h  rectangle_collider.h  resource_manager.h  ship.h  texture_manager.h  world.h
src/: CMakeLists.txt  asteroid.cpp  bullet.cpp  circle_collider.cpp  game.cpp  main.cpp  rectangle_collider.cpp  ship.cpp  world.cpp
